Fix removal of too many urls from history

In some cases, deleting a url from history would also remove other
history entries because the whole referer chain gets removed. The
intention was to only delete redirect that lead to the specified
history entry and not actual referers.
This is fixed by stopping the redirect collection when a CHAIN_START
entry is found.

Bug: 919488
Change-Id: If317d643b37ccb12942bc419b316df493b490699
Reviewed-on: https://chromium-review.googlesource.com/c/1409448
Commit-Queue: Christian Dullweber <dullweber@chromium.org>
Reviewed-by: calamity <calamity@chromium.org>
Reviewed-by: Sylvain Defresne <sdefresne@chromium.org>
Cr-Commit-Position: refs/heads/master@{#622816}
Former-commit-id: 4a476f0f2c75f2d91ac8f7f45fed6544fe9970f3